tests/ui/associated-type-bounds/return-type-notation/display.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/display.rs:1:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `impl Sized { <T as Assoc>::method(..) }: Trait` is not satisfied
  --> $DIR/display.rs:15:17
   |
LL |     needs_trait(T::method());
   |     ----------- ^^^^^^^^^^^ the trait `Trait` is not implemented for `impl Sized { <T as Assoc>::method(..) }`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `needs_trait`
  --> $DIR/display.rs:5:24
   |
LL | fn needs_trait(_: impl Trait) {}
   |                        ^^^^^ required by this bound in `needs_trait`

error[E0277]: the trait bound `impl Sized { <T as Assoc>::method_with_lt(..) }: Trait` is not satisfied
  --> $DIR/display.rs:17:17
   |
LL |     needs_trait(T::method_with_lt());
   |     ----------- ^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `impl Sized { <T as Assoc>::method_with_lt(..) }`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `needs_trait`
  --> $DIR/display.rs:5:24
   |
LL | fn needs_trait(_: impl Trait) {}
   |                        ^^^^^ required by this bound in `needs_trait`

error[E0277]: the trait bound `impl Sized: Trait` is not satisfied
  --> $DIR/display.rs:19:17
   |
LL |     needs_trait(T::method_with_ty());
   |     ----------- ^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `impl Sized`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/display.rs:4:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `needs_trait`
  --> $DIR/display.rs:5:24
   |
LL | fn needs_trait(_: impl Trait) {}
   |                        ^^^^^ required by this bound in `needs_trait`

error[E0277]: the trait bound `impl Sized: Trait` is not satisfied
  --> $DIR/display.rs:21:17
   |
LL |     needs_trait(T::method_with_ct());
   |     ----------- ^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `impl Sized`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/display.rs:4:1
   |
LL | trait Trait {}
   | ^^^^^^^^^^^
note: required by a bound in `needs_trait`
  --> $DIR/display.rs:5:24
   |
LL | fn needs_trait(_: impl Trait) {}
   |                        ^^^^^ required by this bound in `needs_trait`

error: aborting due to 4 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
